--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fuckme.fun | Website</title>
+    <script src="consent.js" type="module"></script>
+
+        
 </head>
 <body>
-hallooooo
 </body>
-</html>d
+</html>
