--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fuckme.fun | Website</title>
-    <script src="consent.js" type="module"></script>
-
-        
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="cf0b1e7c-6d55-4838-9fa4-07ee47884802" data-blockingmode="auto" type="text/javascript"></script>
 </head>
 <body>
+    <button class="bg-sky-600 hover:bg-sky-700">
+    Save changes
+    </button>
+
+
+    <script id="CookieDeclaration" src="https://consent.cookiebot.com/cf0b1e7c-6d55-4838-9fa4-07ee47884802/cd.js" type="text/javascript" async></script>
 </body>
 </html>
