--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 </head>
 <body class="bg-dark-900 text-white">
     <header class="flex justify-center absolute w-full pt-4">
-        <div class="text-fuckmepurple-100 text-2xl p-6">Fuckme.fun™</div>
+        <a href="./" class="text-fuckmepurple-100 text-2xl p-6">Fuckme.fun™</a>
     </header>
 
     <section class="h-screen overflow-hidden pt-11">
