--- a/src/icebreaker.html
+++ b/src/icebreaker.html
@@ -20,6 +20,8 @@
           }
         }
         </script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2669827919522443"
+     crossorigin="anonymous"></script>
         <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
 </head>
 <body class="bg-dark-900 text-white">
@@ -29,8 +31,8 @@
         <a href="./" class="text-fuckmepurple-100 text-2xl p-6">Fuckme.fun™</a>
     </header>
 
-    <section class="h-screen grid grid-cols-12">
-        <div class="col-span-2">
+    <section class="h-screen grid grid-cols-8 md:grid-cols-12">
+        <div class="col-span-2 md:block md:h-screen h-0 overflow-hidden">
             <amp-ad width="100vw" height="100vh"
                 type="adsense"
                 data-ad-client="ca-pub-2669827919522443"
@@ -41,7 +43,7 @@
             </amp-ad>
         </div>
 
-        <div class="col-span-8 flex justify-center items-center h-screen flex-col">
+        <div class="col-span-8 flex justify-center items-center h-screen flex-col p-4">
             <!-- Generator -->
             <div class="text-center">
                 <p class="text-4xl" id="quotefield">"Das ist eine Random Quote"</p>
@@ -50,7 +52,7 @@
             </div>
         </div>
 
-        <div class="col-span-2">
+        <div class="col-span-2 md:h-screen h-0 overflow-hidden">
             <amp-ad width="100vw" height="100vh"
                 type="adsense"
                 data-ad-client="ca-pub-2669827919522443"
@@ -62,6 +64,16 @@
         </div>
     </section>
 
+    <div class="block md:hidden">
+        <amp-ad width="100vw" height="320"
+                type="adsense"
+                data-ad-client="ca-pub-2669827919522443"
+                data-ad-slot="1538540278"
+                data-auto-format="rspv"
+                data-full-width="">
+            <div overflow=""></div>
+            </amp-ad>
+    </div>
 
     <footer class="text-center lg:text-left bg-dark-800 text-gray-600">
         <div class="flex justify-center items-center lg:justify-between p-6">
