--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,8 @@
           }
         }
         </script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2669827919522443"
+     crossorigin="anonymous"></script>
 </head>
 <body class="bg-dark-900 text-white">
     <header class="flex justify-center absolute w-full pt-4">
