Added Google Analytics

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,15 @@
         </script>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2669827919522443"
      crossorigin="anonymous"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BD0WLMFJ0N"></script>
+    <script data-cookieconsent="statistics">
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-BD0WLMFJ0N');
+    </script>
 </head>
 <body class="bg-dark-900 text-white">
     <header class="flex justify-center absolute w-full pt-4">
@@ -217,6 +226,9 @@
               </p>
               <p class="mb-4">
                 <a href="./" class="text-gray-600">Homepage</a>
+              </p>
+              <p class="mb-4">
+                <a href="./sitemap.xml" class="text-gray-600">Sitemap</a>
               </p>
             </div>
             <div class="">
