--- a/src/impressum.html
+++ b/src/impressum.html
@@ -22,6 +22,15 @@
         </script>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2669827919522443"
      crossorigin="anonymous"></script>
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BD0WLMFJ0N"></script>
+<script data-cookieconsent="statistics">
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BD0WLMFJ0N');
+</script>
      <style>
          h1{
              font-weight: 700;
