--- a/src/icebreaker.html
+++ b/src/icebreaker.html
@@ -56,7 +56,7 @@
             <!-- Generator -->
             <div class="text-center">
                 <p class="text-4xl" id="quotefield">"Das ist eine Random Quote"</p>
-                <div id="quotetype mt-6">Klassiker</div>
+                <div class=" mt-6" id="quotetype">Klassiker</div>
                 <button id="newquotebutton" class="mt-5 text-center bg-fuckmepurple-1000 hover:bg-fuckmepurple-1100 font-bold py-2 px-4 rounded inline-flex items-center self-center">Neuer Icebracker™</button>
             </div>
         </div>
