--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
         <!-- Here will be the Condom and the Main section -->
         <div class="mt-5">
             <div class="flex justify-center pt-11 z-10 md:absolute w-full flex-col items-center mt-11">
-                <h1 class="text-fuckmepurple-900 text-4xl font-bold text-center w-1/2">"Finde jetzt den Perfekten Icebracker™"</h1>
+                <h1 class="text-fuckmepurple-900 text-4xl font-bold text-center w-1/2">"Finde jetzt den perfekten Icebracker™"</h1>
                 <a href="./icebreaker.html" class="mt-5 text-center bg-fuckmepurple-1000 hover:bg-fuckmepurple-1100 font-bold py-2 px-4 rounded inline-flex items-center self-center">Zum Anmachspruch Generator</a>
             </div>
             <div class="flex justify-center md:pt-11">
@@ -55,7 +55,7 @@
     
     <section class="bg-dark-800 pt-11 flex flex-col justify-center items-center p-4">
         <h1 class="text-3xl self-center mb-3 text-center">Erhalte Updates über diese Website...</h1>
-        <p class="w-5/6 pt-3 text-center text-dark-100 mb-3">Wenn du benachrichtige werden möchtest, wann wir neue Artikel oder Funktionen auf der Website herausbringen oder sogar anfangen Produkte zu verkaufen, melde dich doch einfach in unserem kostenliosem Newsletter an. Du kannst dich auch jederzeit wieder abmelden :-)</p>
+        <p class="w-5/6 pt-3 text-center text-dark-100 mb-3">Wenn du Benachrichtigt werden möchtest, wann wir neue Artikel oder, wann wir neue Funktionen auf der Website herausbringen, melde dich doch einfach in unserem kostenliosem Newsletter an. Du kannst dich auch jederzeit wieder abmelden :-)</p>
         <div class="w-10/12 md:w-1/3 flex flex-col items-center pb-6">
             <!-- Begin Mailchimp Signup Form -->
     <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7_dtp.css" rel="stylesheet" type="text/css">
