--- a/src/icebreaker.html
+++ b/src/icebreaker.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Icebraker | Fuckme.fun Anmachsprüche Generator</title>
+    <title>Icebraker | Fuckme.fun Anmachsprüche Generator und Icebracker™</title>
+    <!-- SEO -->
+    <meta name="og:title" content="Der Icebracker™ generator | Finde den perfekten Anmachspruch"/>
+    <meta name="og:type" content="tool"/>
+    <meta name="og:url" content="www.fuckme.fun/icebreacker"/>
+    <meta name="og:image" content="./assets/images/rubber-mockup-fuckmefun-min.png"/>
+    <meta name="og:description" content="Hey, du brauchst einen perfekten Anmachspruch, egal on Eklig, Kassiker oder auch einfach nur Dumm wir generieren dir den Perfekten Anmachspruch."/>
+    <!-- ---- -->
+    <meta name="description" content="Hey, du brauchst einen perfekten Anmachspruch, egal on Eklig, Kassiker oder auch einfach nur Dumm wir generieren dir den Perfekten Anmachspruch.">
     <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="cf0b1e7c-6d55-4838-9fa4-07ee47884802" data-blockingmode="auto" type="text/javascript"></script>
     <link rel="stylesheet" href="styles.scss">
     <script type="application/ld+json">
