--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fuckme.fun | Website</title>
+    <meta name="description" content="Das ist die Homopage von fuckme.fun eine witzige Website mit verschiednen Tools :-() | Probiere unseren Anmachspruch Generator aus!">
     <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="cf0b1e7c-6d55-4838-9fa4-07ee47884802" data-blockingmode="auto" type="text/javascript"></script>
     <link rel="stylesheet" href="styles.scss">
     <script type="application/ld+json">
@@ -189,7 +190,7 @@
         <div class="mx-6 py-10 text-center md:text-left flex justify-center items-center flex-col">
           <div class="grid grid-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
             <div class="">
-              <h6 class="
+              <h1 class="
                   font-semibold
                   mb-4
                   flex
@@ -198,15 +199,15 @@
                   md:justify-start
                 ">
                 Fuckme.fun
-              </h6>
+              </h1>
               <p>
                 Hi, du hast noch fragen über die Website, dir ist ein Bug aufgefallen oder du hast eine Idee? Dann schreibe uns einfach <a href="mailto:lets@fuckme.fun" class="underline underline-offset-4 decoration-fuckmepurple-1000">hier</a> eine Email :-)
               </p>
             </div>
             <div class="">
-              <h6 class="uppercase font-semibold mb-4 flex justify-center md:justify-start">
+              <h2 class="uppercase font-semibold mb-4 flex justify-center md:justify-start">
                 Allgemeine Links
-              </h6>
+              </h2>
               <p class="mb-4">
                 <a href="./datenschutzerklaerung.html" class="text-gray-600">Datenschutz</a>
               </p>
@@ -218,9 +219,9 @@
               </p>
             </div>
             <div class="">
-              <h6 class="uppercase font-semibold mb-4 flex justify-center md:justify-start">
+              <h3 class="uppercase font-semibold mb-4 flex justify-center md:justify-start">
                 Verschiedne Seiten
-              </h6>
+              </h3>
               <p class="mb-4">
                 <a href="./icebreaker.html" class="text-gray-600">Generator</a>
               </p>
@@ -232,9 +233,9 @@
               </p>
             </div>
             <div class="">
-              <h6 class="uppercase font-semibold mb-4 flex justify-center md:justify-start">
+              <div class="uppercase font-semibold mb-4 flex justify-center md:justify-start">
                 Andere Websiten
-              </h6>
+              </div>
               <p class="mb-4">
                 <a href="https://fickdich.jetzt" class="text-gray-600">Fickdich.jetzt</a>
               </p>
