--- a/src/datenschutzerklaerung.html
+++ b/src/datenschutzerklaerung.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fuckme.fun | Website</title>
+    <title>Fuckme.fun | Datenschutz</title>
+    <meta name="description" content="Hier kannst du alles bezüglich unseren Datenschutz lesen.">
     <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="cf0b1e7c-6d55-4838-9fa4-07ee47884802" data-blockingmode="auto" type="text/javascript"></script>
     <link rel="stylesheet" href="styles.scss">
     <script type="application/ld+json">
